--- a/tool/overround/index.html
+++ b/tool/overround/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>배당 ↔ 확률 변환기</title>
-<meta name="description" content="배당을 확률로, 확률을 공정 배당으로 빠르게 변환합니다. (단일 결과 단순 기준)">
-<link rel="canonical" href="https://88st.cloud/tool-odds/">
+<title>오버라운드(배당 마진) 계산기 | 88st.cloud</title>
+<meta name="description" content="배당을 입력하면 오버라운드(암시확률 합)와 마진%, 공정확률/공정배당을 빠르게 계산합니다.">
+<link rel="canonical" href="https://88st.cloud/tool/overround/">
 <meta name="robots" content="index,follow">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="88 (팔팔커뮤니티)">
-<meta property="og:title" content="배당 ↔ 확률 변환기">
-<meta property="og:description" content="배당을 확률로, 확률을 공정 배당으로 빠르게 변환합니다. (단일 결과 단순 기준)">
-<meta property="og:url" content="https://88st.cloud/tool-odds/">
+<meta property="og:title" content="오버라운드(배당 마진) 계산기 | 88st.cloud">
+<meta property="og:description" content="배당을 입력하면 오버라운드(암시확률 합)와 마진%, 공정확률/공정배당을 빠르게 계산합니다.">
+<meta property="og:url" content="https://88st.cloud/tool/overround/">
 <style>
 :root{
   /* Theme (auto/preset) */
@@ -112,7 +112,7 @@ footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-heigh
 }
 
 </style>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "배당 2.00은 확률로 얼마인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시 확률은 1/2.00 = 50% 입니다(단일 결과 기준)."}}, {"@type": "Question", "name": "확률 60%면 공정 배당은?", "acceptedAnswer": {"@type": "Answer", "text": "공정 배당은 1/0.60 = 1.667 입니다(마진 없는 단순 계산)."}}, {"@type": "Question", "name": "여러 결과(승/무/패)는 어떻게 하나요?", "acceptedAnswer": {"@type": "Answer", "text": "각 결과 배당을 모두 넣고 마진 계산기에서 오버라운드를 구한 뒤, 공정확률/공정배당을 확인하는 방식이 정확합니다."}}, {"@type": "Question", "name": "마진이 있으면 확률 변환이 왜 달라지나요?", "acceptedAnswer": {"@type": "Answer", "text": "북메이커는 각 결과에 수수료를 포함시키기 때문에(오버라운드), 단순 1/배당의 합이 100%를 넘을 수 있습니다."}}, {"@type": "Question", "name": "이 변환은 언제 쓰면 좋나요?", "acceptedAnswer": {"@type": "Answer", "text": "손익분기점 계산, EV 계산의 기본 입력값 확인, 배당 비교(가치 판단)에 유용합니다."}}]}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "오버라운드(마진)가 몇 %면 높은 편인가요?", "acceptedAnswer": {"@type": "Answer", "text": "종목/리그/시장에 따라 다르지만, 일반적으로 마진이 낮을수록 유리합니다. 같은 조건이면 2~4%대가 6~10%대보다 장기 기대값이 좋습니다."}}, {"@type": "Question", "name": "공정확률/공정배당은 무엇인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시확률을 100%로 정규화해 마진을 제거한 값입니다. ‘마진이 없는 시장’이라고 가정한 공정 기준으로 비교할 때 사용합니다."}}, {"@type": "Question", "name": "2-way와 3-way는 언제 쓰나요?", "acceptedAnswer": {"@type": "Answer", "text": "승/패만 있는 시장은 2-way, 승/무/패가 있는 시장은 3-way로 계산합니다."}}, {"@type": "Question", "name": "마진이 낮으면 무조건 좋은 배팅인가요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. 마진은 ‘수수료’에 가깝고, 실제 수익 여부는 추정 승률(엣지)과 배당의 균형(EV)에 달려 있습니다."}}, {"@type": "Question", "name": "이 계산기는 정답인가요?", "acceptedAnswer": {"@type": "Answer", "text": "계산 자체는 산술이지만, 실제 결과는 변동성이 큽니다. 참고용으로만 활용해 주세요."}}]}</script>
 <script src="../assets/theme-preset.js" defer></script>
 
 <style id="v13_1_theme_override">
@@ -210,8 +210,8 @@ a{ color:inherit; }
     {
       "@type": "ListItem",
       "position": 2,
-      "name": "배당↔확률 변환",
-      "item": "https://88st.cloud/tool-odds/"
+      "name": "오버라운드 계산기",
+      "item": "https://88st.cloud/tool/overround/"
     }
   ]
 }
@@ -223,7 +223,7 @@ a{ color:inherit; }
 <body>
   <div class="wrap">
     <div class="topbar">
-      <div class="brand"><span class="badge">88</span> 배당↔확률 변환</div>
+      <div class="brand"><span class="badge">88</span> 배당 마진 계산기</div>
       <div class="navlinks" aria-label="바로가기">
         <a href="/" rel="home">홈</a>
         <a href="/analysis/">분석기</a>
@@ -234,76 +234,102 @@ a{ color:inherit; }
     </div>
 
     <div class="hero">
-      <h1>배당 ↔ 확률 변환기</h1>
-      <p>배당을 확률로, 확률을 공정 배당으로 빠르게 변환합니다. (단일 결과 단순 기준)<br><span class="small">※ 정보 제공/참고용 · 결과를 보장하지 않습니다.</span></p>
+      <h1>오버라운드(배당 마진) 계산기</h1>
+      <p>배당을 입력하면 암시확률 합(오버라운드)과 마진%, 공정확률/공정배당을 계산합니다.<br><span class="small">※ 정보 제공/참고용 · 결과를 보장하지 않습니다.</span></p>
     </div>
 
     
 <div class="grid">
   <div class="card">
-    <h2>배당 → 확률</h2>
+    <h2>입력</h2>
     <div class="row">
       <div class="field">
-        <label for="odds">배당</label>
-        <input id="odds" inputmode="decimal" placeholder="예: 1.95" value="1.95">
+        <label for="mode">시장</label>
+        <select id="mode">
+          <option value="2">2-way (승/패)</option>
+          <option value="3" selected>3-way (승/무/패)</option>
+        </select>
+      </div>
+      <div class="field">
+        <label for="o1">홈/승 배당</label>
+        <input id="o1" inputmode="decimal" placeholder="예: 1.85" value="1.85">
+      </div>
+      <div class="field">
+        <label for="o2">무/원정 배당</label>
+        <input id="o2" inputmode="decimal" placeholder="예: 3.40" value="3.40">
+      </div>
+      <div class="field" id="o3wrap">
+        <label for="o3">원정/패 배당</label>
+        <input id="o3" inputmode="decimal" placeholder="예: 4.20" value="4.20">
       </div>
     </div>
     <div class="btnrow">
-      <div class="btn" id="toProbBtn">변환</div>
-      <div class="btn secondary" id="toProbReset">초기화</div>
+      <div class="btn" id="calcBtn">계산하기</div>
+      <div class="btn secondary" id="resetBtn">초기화</div>
     </div>
-    <div class="kv">
-      <div class="item"><div class="k">암시 확률</div><div class="v" id="probOut">-</div></div>
-      <div class="item"><div class="k">손익분기점</div><div class="v" id="beOut">-</div></div>
-    </div>
-    <div class="small" style="margin-top:8px;">※ 단일 결과 기준(마진 단순화 가정)</div>
+    <div class="out" id="hint">배당을 입력하면 오버라운드(마진)와 공정확률/공정배당을 계산합니다.</div>
   </div>
 
   <div class="card">
-    <h2>확률 → 배당</h2>
-    <div class="row">
-      <div class="field">
-        <label for="prob">확률(%)</label>
-        <input id="prob" inputmode="decimal" placeholder="예: 52" value="52">
-      </div>
-    </div>
-    <div class="btnrow">
-      <div class="btn" id="toOddsBtn">변환</div>
-      <div class="btn secondary" id="toOddsReset">초기화</div>
-    </div>
+    <h2>결과</h2>
     <div class="kv">
-      <div class="item"><div class="k">공정 배당</div><div class="v" id="oddsOut">-</div></div>
-      <div class="item"><div class="k">참고</div><div class="v" id="noteOut">-</div></div>
+      <div class="item"><div class="k">오버라운드 합(암시확률)</div><div class="v" id="sumImp">-</div></div>
+      <div class="item"><div class="k">마진(오버라운드)</div><div class="v" id="margin">-</div></div>
+      <div class="item"><div class="k">공정확률(정규화)</div><div class="v" id="fairProb">-</div></div>
+      <div class="item"><div class="k">공정배당(마진 제거)</div><div class="v" id="fairOdds">-</div></div>
     </div>
+    <div class="sep"></div>
+    <div class="small" id="explain"></div>
   </div>
 </div>
 
 <script>
-function num(v){ const x=parseFloat(v); return (isFinite(x)) ? x : NaN; }
+function num(v){ const x=parseFloat(v); return (isFinite(x) && x>1e-9) ? x : NaN; }
 function pct(x){ return (x*100).toFixed(2) + "%"; }
 function fmt(x){ return isFinite(x) ? x.toFixed(3) : "-"; }
 
-function toProb(){
-  const o=num(document.getElementById("odds").value);
-  if(!isFinite(o) || o<=1){ alert("배당을 올바르게 입력해 주세요 (1.01 이상)."); return; }
-  const p = 1/o;
-  document.getElementById("probOut").textContent = pct(p);
-  document.getElementById("beOut").textContent = pct(p);
+function calc(){
+  const mode = document.getElementById("mode").value;
+  const o1=num(document.getElementById("o1").value);
+  const o2=num(document.getElementById("o2").value);
+  const o3=num(document.getElementById("o3").value);
+
+  const odds = (mode==="2") ? [o1,o2] : [o1,o2,o3];
+  if(odds.some(x=>!isFinite(x) || x<=1)) { alert("배당을 올바르게 입력해 주세요 (1.01 이상)."); return; }
+
+  const imps = odds.map(o=>1/o);
+  const sum = imps.reduce((a,b)=>a+b,0);
+  const over = sum - 1;
+
+  const fairP = imps.map(p=>p/sum);
+  const fairO = fairP.map(p=>1/p);
+
+  document.getElementById("sumImp").textContent = pct(sum);
+  document.getElementById("margin").textContent = (over>=0? "+" : "") + pct(over);
+
+  document.getElementById("fairProb").textContent = fairP.map(p=>pct(p)).join(" · ");
+  document.getElementById("fairOdds").textContent = fairO.map(o=>fmt(o)).join(" · ");
+
+  document.getElementById("explain").textContent =
+    "암시확률 합이 100%를 넘는 만큼(오버라운드)이 북메이커 마진입니다. 동일한 추정 실력이라면 마진이 낮은 시장이 장기적으로 유리합니다.";
 }
-function toOdds(){
-  const p=num(document.getElementById("prob").value)/100;
-  if(!isFinite(p) || p<=0 || p>=1){ alert("확률(%)을 1~99 사이로 입력해 주세요."); return; }
-  const o = 1/p;
-  document.getElementById("oddsOut").textContent = fmt(o);
-  document.getElementById("noteOut").textContent = "마진 없는 공정 배당(단순 계산)";
+
+function sync(){
+  const mode = document.getElementById("mode").value;
+  document.getElementById("o3wrap").style.display = (mode==="2") ? "none" : "flex";
 }
-document.getElementById("toProbBtn").addEventListener("click", toProb);
-document.getElementById("toOddsBtn").addEventListener("click", toOdds);
-document.getElementById("toProbReset").addEventListener("click", ()=>{ document.getElementById("odds").value="1.95"; toProb(); });
-document.getElementById("toOddsReset").addEventListener("click", ()=>{ document.getElementById("prob").value="52"; toOdds(); });
-document.getElementById("odds").addEventListener("input", toProb);
-document.getElementById("prob").addEventListener("input", toOdds);
-toProb(); toOdds();
+
+document.getElementById("mode").addEventListener("change", ()=>{ sync(); calc(); });
+document.getElementById("calcBtn").addEventListener("click", calc);
+document.getElementById("resetBtn").addEventListener("click", ()=>{
+  document.getElementById("mode").value="3";
+  document.getElementById("o1").value="1.85";
+  document.getElementById("o2").value="3.40";
+  document.getElementById("o3").value="4.20";
+  sync(); calc();
+});
+["o1","o2","o3"].forEach(id=> document.getElementById(id).addEventListener("input", ()=> calc()));
+sync(); calc();
 </script>
 
 
@@ -351,28 +377,28 @@ toProb(); toOdds();
       <h2>자주 묻는 질문(FAQ)</h2>
       <div class="faq">
       <details>
-        <summary>배당 2.00은 확률로 얼마인가요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">암시 확률은 1/2.00 = 50% 입니다(단일 결과 기준).</div>
+        <summary>오버라운드(마진)가 몇 %면 높은 편인가요?</summary>
+        <div class="small" style="margin-top:8px; line-height:1.6;">종목/리그/시장에 따라 다르지만, 일반적으로 마진이 낮을수록 유리합니다. 같은 조건이면 2~4%대가 6~10%대보다 장기 기대값이 좋습니다.</div>
       </details>
 
       <details>
-        <summary>확률 60%면 공정 배당은?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">공정 배당은 1/0.60 = 1.667 입니다(마진 없는 단순 계산).</div>
+        <summary>공정확률/공정배당은 무엇인가요?</summary>
+        <div class="small" style="margin-top:8px; line-height:1.6;">암시확률을 100%로 정규화해 마진을 제거한 값입니다. ‘마진이 없는 시장’이라고 가정한 공정 기준으로 비교할 때 사용합니다.</div>
       </details>
 
       <details>
-        <summary>여러 결과(승/무/패)는 어떻게 하나요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">각 결과 배당을 모두 넣고 마진 계산기에서 오버라운드를 구한 뒤, 공정확률/공정배당을 확인하는 방식이 정확합니다.</div>
+        <summary>2-way와 3-way는 언제 쓰나요?</summary>
+        <div class="small" style="margin-top:8px; line-height:1.6;">승/패만 있는 시장은 2-way, 승/무/패가 있는 시장은 3-way로 계산합니다.</div>
       </details>
 
       <details>
-        <summary>마진이 있으면 확률 변환이 왜 달라지나요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">북메이커는 각 결과에 수수료를 포함시키기 때문에(오버라운드), 단순 1/배당의 합이 100%를 넘을 수 있습니다.</div>
+        <summary>마진이 낮으면 무조건 좋은 배팅인가요?</summary>
+        <div class="small" style="margin-top:8px; line-height:1.6;">아닙니다. 마진은 ‘수수료’에 가깝고, 실제 수익 여부는 추정 승률(엣지)과 배당의 균형(EV)에 달려 있습니다.</div>
       </details>
 
       <details>
-        <summary>이 변환은 언제 쓰면 좋나요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">손익분기점 계산, EV 계산의 기본 입력값 확인, 배당 비교(가치 판단)에 유용합니다.</div>
+        <summary>이 계산기는 정답인가요?</summary>
+        <div class="small" style="margin-top:8px; line-height:1.6;">계산 자체는 산술이지만, 실제 결과는 변동성이 큽니다. 참고용으로만 활용해 주세요.</div>
       </details></div>
     </div>
 
