--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -433,6 +433,10 @@ a{ color:inherit; }
 </script>
 
 <script src="/assets/js/88st-analytics.js"></script>
+
+<!-- 88ST Theme Toggle (system/dark/light) -->
+<script src="/assets/88st-theme.js"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css">
 </head>
 <body>
 <section class="rel-links" aria-label="랜딩 바로가기" style="margin-top:16px;">
