--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1837,6 +1837,10 @@ const INSIGHTS_BY_SPORT = {
 <link rel="stylesheet" href="assets/mobile-polish.css?v=2">
 
 <script src="/assets/js/88st-analytics.js"></script>
+
+<!-- 88ST Theme Toggle (system/dark/light) -->
+<script src="/assets/88st-theme.js"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css">
 </head>
 <body>
 <div class="notice-bar">
