--- a/tool-ev/index.html
+++ b/tool-ev/index.html
@@ -220,6 +220,10 @@ a{ color:inherit; }
 <script src="/assets/js/88st-analytics.js"></script>
 <script src="/assets/js/vendor-teasers.js" defer></script>
 <link rel="stylesheet" href="/assets/vendor-teasers.css">
+
+<!-- 88ST Theme Toggle (system/dark/light) -->
+<script src="/assets/88st-theme.js"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css">
 </head>
 <body>
   <div class="wrap">
