--- a/slot/index.html
+++ b/slot/index.html
@@ -227,6 +227,10 @@ a{ color:inherit; }
 </script>
 
 <script src="/assets/js/88st-analytics.js"></script>
+
+<!-- 88ST Theme Toggle (system/dark/light) -->
+<script src="/assets/88st-theme.js"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css">
 </head>
 
 <body>
